--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -42,13 +42,13 @@ The pore volume is calculated by random sampling of the accessible and inaccessi
 
 \subsection{Intermolecular interaction energies}
 
-In most of the studies in thesis, we will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a given set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
+In most of the studies in this thesis, we will consider rigid structures interacting with guest adsorbates; the intramolecular interactions will not play any role in the simulations since the ionic, chemical or metallic  bonds between the atoms of a same molecule are predefined at a given set of distances and remain the same. As discussed in the final chapter, this approximation can generate discrepancies between the theoretical model and the experiments. However, since the goal is to achieve screening approaches like the ones introduced in the first chapter, adding flexibility in the intramolecular interactions would reduce considerably the size of the database that could be screened. For these reasons, the term ``interaction energy'' will designate the guest--host and guest--guest intermolecular interactions mainly --- host--host interactions would compromise the assumption on the rigidity of the framework.
 
-In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bondings ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the Van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bondings will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``Van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\cite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\cite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\cite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
+In classical theory of molecular physics, the intermolecular interactions can be categorized in three different types according to their strength: (i) the ion--dipole and ion--induced dipole forces ($40$--$600$~\si{\kilo\joule\per\mol}), (ii) the hydrogen bonding ($10$--$50$~\si{\kilo\joule\per\mol}), and (iii) the Van der Waals forces ($1$--$10$~\si{\kilo\joule\per\mol}). Note that these energy values are only indicative and the interaction depends on the nature of the molecules, but it allows us to rank the different foreces according to their strength; and to complete the molecular interactions picture, we can add that the ionic and covalent bonding will always be stronger than any intermolecular interactions (over $100$~\si{\kilo\joule\per\mol}). The generic term ``Van der Waals interactions'' actually regroups three different concepts usually called Keesom, Debye and London interactions. The Keesom interaction focuses on the electrostatic interaction between permanent multipoles (representing the electronic density around the molecules),\cite{keesom1915second} while the Debye induction force corresponds to the interaction between a multipole of a molecule and an induced multipole of another one,\cite{Roberts_1938} and the London dispersion interaction occurs between instantaneous multipoles created by natural fluctuations in the electron density around polarizable atoms.\cite{london1930theorie,polanyi1932section} To quantify these interactions, we can consider dipole interactions since they are the most influential in the multipole expansion of the electron density. The Keesom interaction potential $V\e{K}$ can therefore be reduced to the dipole--dipole interaction, which depends on the inverse third power of the distance for fixed dipoles; but in fluid phases we are interested in, the average over all the angles is rather given by the inverse sixth power as described in the equation~\ref{eq:keesom} below:
 \begin{equation}\label{eq:keesom}
   V\e{K} = -\dfrac{\mu_1^2\mu_2^2}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{ 1.5k\e{B}T}
 \end{equation}
-where $\mu_1$ and $\mu_2$ are the dipole moments of the molecules $1$ and $2$, $\epsilon_0$ the vaccum dielectric permittivity and $\epsilon_r$ relative permittivity of the surrounding material, k\e{B} the Boltzmann constant, $T$ the temprature and $r$ the intermolecular distance. The Debye interaction potential $V\e{D}$ being reduced to the permanent dipole--induced dipole interactions can now be expressed using the electric polarizability $\alpha_1$ and $\alpha_2$ of the molecule $2$ as shown in equation~\ref{eq:debye}.
+where $\mu_1$ and $\mu_2$ are the dipole moments of the molecules $1$ and $2$, $\epsilon_0$ the vacuum dielectric permittivity and $\epsilon_r$ relative permittivity of the surrounding material, k\e{B} the Boltzmann constant, $T$ the temperature and $r$ the intermolecular distance. The Debye interaction potential $V\e{D}$ being reduced to the permanent dipole--induced dipole interactions can now be expressed using the electric polarizability $\alpha_1$ and $\alpha_2$ of the molecule $2$ as shown in equation~\ref{eq:debye}.
 \begin{equation}\label{eq:debye}
   V\e{D} = -\dfrac{\mu_1^2\alpha_2 + \mu_2^2\alpha_1}{(4\pi\epsilon_0\epsilon_r)^2r^6}\times\dfrac{1}{k\e{B}T}
 \end{equation}
@@ -62,11 +62,11 @@ For the system we are studying in this thesis, the adsorption of noble gases in 
 \begin{equation}\label{eq:LJ}
   V\e{LJ} = 4\epsilon \left(\left(\dfrac{\sigma}{r}\right)^{12} - \left(\dfrac{\sigma}{r}\right)^{6}\right)
 \end{equation}
-where $\epsilon$ is the depth of the well (minimal energy) and $\sigma$ is the distance at which the potential is zero. The forcefield defines the LJ parameters $\epsilon$ and $\sigma$ for either all atom pairs or only for the same type of atoms. For the commonly used universal forcefield (UFF),\cite{rappe1992} only the parameters for atoms of the same nature are defined and the parameters of the pair atoms can be induced using combining rules. In this thesis, we will use the UFF forcefield (because it performs well comparing with \emph{ab initio} forcefield \cite{McDaniel_2015}) and the Lorentz-Berthelot mixing rules to combine the LJ parameters --- it makes an arithmetic average of the $\sigma$ values (Lorentz rule) and a geometric one of the $\epsilon$ values (Berthelot rule). Finally, to reduce the computation time, we usually set a cutoff distance at which the LJ potential can be considered negligible. At this cutoff distance, we can for example apply a shift so that the energy equals zero at the cutoffs (discontinuity of energy), just truncate (discontinuity of the force), or use a tail switching function to make the tail converge smoothly to zero near the cutoff. To make it simple, in most of the simulations in the screenings, a shifting strategy combined with a cutoff of \SI{12}{\angstrom} have been used.
+where $\epsilon$ is the depth of the well (minimal energy) and $\sigma$ is the distance at which the potential is zero. The forcefield defines the LJ parameters $\epsilon$ and $\sigma$ for either all atom pairs or only for the same type of atoms. For the commonly used universal forcefield (UFF),\cite{rappe1992} only the parameters for atoms of the same nature are defined and the parameters of the pair atoms can be induced using combining rules. In this thesis, we will use the UFF forcefield (because it performs well compared with \emph{ab initio} forcefield \cite{McDaniel_2015}) and the Lorentz-Berthelot mixing rules to combine the LJ parameters --- it makes an arithmetic average of the $\sigma$ values (Lorentz rule) and a geometric one of the $\epsilon$ values (Berthelot rule). Finally, to reduce the computation time, we usually set a cutoff distance at which the LJ potential can be considered negligible. At this cutoff distance, we can for example apply a shift so that the energy equals zero at the cutoffs (discontinuity of energy), just truncate (discontinuity of the force), or use a tail switching function to make the tail converge smoothly to zero near the cutoff. To make it simple, in most of the simulations in the screenings, a shifting strategy combined with a cutoff of \SI{12}{\angstrom} have been used.
 
-Usually in adsorption simulations of other gas molecules containing partial charges, we need to calculate the Coulomb interaction between the partial charges of the host framework and those of the adsorbate --- in periodic systems, the Ewald summation can be used. For noble gases, these ion--dipole and dipole--dipole interactions does not occur due to the perfect neutrality of the molecules. However, we can argue that the ion--induced dipole is not taken into account in a simplified LJ potential. To complete the whole picture of the intermolecular interactions, we would need to study the energy inducted by the surrounding framework atoms's charged on the adsorbate. Several approaches have been developed in the literature to improve the description of the intermolecular interactions by coupling the LJ potentials with an induction potential.\cite{Lachet_1998,Becker_2017} 
+Usually in adsorption simulations of other gas molecules containing partial charges, we need to calculate the Coulomb interaction between the partial charges of the host framework and those of the adsorbate --- in periodic systems, the Ewald summation can be used. For noble gases, these ion--dipole and dipole--dipole interactions do not exist due to the perfect neutrality of the molecules. However, we can argue that the ion--induced dipole is not taken into account in a simplified LJ potential. To complete the whole picture of the intermolecular interactions, we would need to study the energy inducted by the surrounding framework atoms’ charges on the adsorbate. Several approaches have been developed in the literature to improve the description of the intermolecular interactions by coupling the LJ potentials with an induction potential.\cite{Lachet_1998,Becker_2017} 
 
-To wrap up this small seciton on the modelization of the intermolecular interactions in the adsorption simulations, I want to emphasize once more on the main modelization assumptions that could alter the accuracy of our method. First, the framework remains rigid during the whole simulation, which avoids the need for a molecular dynamics simulation of the framework to save time but also hide the effects of a known phenomenon.\cite{Witman_2017} Second, the polarizability of the adsorbate are not fully taken into account since the interaction with the charges of the framework are not considered; the difference in polarizability between xenon and krypton can be further exploited to enhence the selectivity even more, experimental studies suggest the key role of polar groups and open metal sites.\cite{Li_2019,Pei_2022,Perry_2014} And finally, the complex induction and dispersion interactions are described with a two-parameter model, which cannot capture all the subtlety of the differences between a same atom in different environments for instance; it could be possible to finetune these parameters in very specific cases, but the overall good performance \cite{McDaniel_2015} of the UFF forcefield needed in a screening process can induce small errors when looking at specific cases.
+To wrap up this small section on the modelization of the intermolecular interactions in the adsorption simulations, I want to emphasize once more on the main modelization assumptions that could alter the accuracy of our method. First, the framework remains rigid during the whole simulation, which avoids the need for a molecular dynamics simulation of the framework to save time but also hides the effects of a known phenomenon.\cite{Witman_2017} Second, the polarizability of the adsorbate is not fully taken into account since the interaction with the charges of the framework are not considered; the difference in polarizability between xenon and krypton can be further exploited to enhence the selectivity even more, experimental studies suggest the key role of polar groups and open metal sites.\cite{Li_2019,Pei_2022,Perry_2014} And finally, the complex induction and dispersion interactions are described with a two-parameter model, which cannot capture all the subtlety of the differences between a same atom in different environments for instance; it could be possible to fine-tune these parameters in very specific cases, but the overall good performance \cite{McDaniel_2015} of the UFF forcefield needed in a screening process can induce small errors when looking at specific cases.
 These assumptions have been made to find the right trade-off of the speed of computation versus a detailed description of the physical phenomena at stake. 
 
 
@@ -98,7 +98,7 @@ The multiplicative prefactor has no influence on the algorithm, we do not need t
   \caption{MC moves in a system of two types of monoatomic atoms (green and orange). The modification on the first box is highlighted by the yellow circle and the dragging pattern is represented by a set of dashed circles. The boxes 2 to 4 represent the moves going from the initial state represented in box 1, the corresponding move is highlighted by a yellow outer circle. }\label{fgr:mc}
 \end{figure}
 
-To complete the description of the grand canonical Monte Carlo (GCMC) simulation we are interested in, let us now consider the different MC moves used to generate a configuration from another. Depending on the parameterization, these moves have different probabilities of occurring. For monoatomic atoms only four moves are relevant (see Figure~\ref{fgr:mc}): (i) the translation of a randomly chosen molecule with a displacement randomly chosen within a given radius, (ii) the change of identity of a randomly chosen molecule into another, (iii) the insertion of an adsorbate molecule and (iv) the deletion of an adsorbate molecule. We deliberately omitted the rotations of the adsorbate because of the spherical symmetry of noble gases and the change of volume since the flexibility of the material framework is neglected. 
+To complete the description of the grand canonical Monte Carlo (GCMC) simulation we are interested in, let us now consider the different MC moves used to generate a configuration from another. Depending on the parameterization, these moves have different probabilities of occurring. For monoatomic atoms only four moves are relevant (see Figure~\ref{fgr:mc}): (i) the translation of a randomly chosen molecule with a displacement randomly chosen within a given radius, (ii) the change of identity of a randomly chosen molecule into another one, (iii) the insertion of an adsorbate molecule and (iv) the deletion of an adsorbate molecule. We deliberately omitted the rotations of the adsorbate because of the spherical symmetry of noble gases and the change of volume since the flexibility of the material framework is neglected. 
 
 By using a GCMC algorithm, we can now generate a set of configurations according to their probability of occurrence. Because the probability law is directly taken from equation~\ref{eq:gc}, the series of configurations describe the thermodynamic equilibrium state of a nanoporous material in contact with a reservoir of a xenon-krypton mixture at a given composition, pressure and temperature. Different thermodynamic quantities can be derived from ensemble averaging: the averaging loading or uptake at a given pressure (several pressures give the isotherm) and the isosteric heat of adsorption of each adsorbate (Xe and Kr). The ratio of the uptakes $q$ informs on the selectivity $s$ of the thermodynamic separation process: 
 \begin{equation}\label{eq:selec}
