--- a/4-ml.tex
+++ b/4-ml.tex
@@ -20,6 +20,8 @@ Unsupervised learning
 
 \subsection{How to learn accurately}
 
+\todo{Bayesian problem: knowing a series of t}
+
 \todo{cross validation, overfitting, hyperparameter optimization}
 
 \subsubsection{Hyperparameter fine-tuning}
@@ -32,6 +34,13 @@ We used the training data to perform a random search of hyperparameters, with 5-
 The final model is trained on the predefined training set using XGBoost with the fine-tuned hyperparameters. By testing it on the test set, we measure the accuracy of our approach, however, it is interesting to extract chemical insight into the hidden relationship between the predicted value and the descriptors, to better understand the thermodynamic origins of the performance. In this work, we used the Shapley values,\cite{shapley1953value} a game theory concept developed by Shapley in 1953, to measure the contribution of each descriptor in the predicted value. This tool is used locally to understand for a given structure how their characteristics had contributed to the prediction. To draw structure-property relationships, we would need to use a global interpretation methods such as the SHapley Additive exPlanations (SHAP) method thoroughly detailed in the online book \emph{Interpretable Machine Learning} of Christoph Molnar.\cite{molnar2020interpretable} The SHAP tool developed by Lundberg and Lee~\cite{SHAP} is based on a faster algorithm adapted to tree-based ML models like gradient boosting, TreeSHAP, and integrates useful global interpretation modules like SHAP feature importance and dependence plot.
 
 \subsection{Tree-based models}
+
+\subsubsection{Regression tree}
+
+\subsubsection{Random Forest}
+
+\subsubsection{Gradient Boosting}
+
 
 random forest 
 boosting
