--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -9,11 +9,26 @@
 Final screening step, easy integration into the workflow of current sreenings
 \subsection{Problem, literature}
 
-\subsection{Snapshot}
+\subsection{Database approach}
 
-\section{Noble gas polarisability}
+\subsection{Perspectives: Snapshot method}
 
-\todo{faire référence à 2-thermo partie sur les interactions}
+\section{Noble Gas Polarizability}
+
+\subsection{Problem definition}
+
+Best materials use polarization effects \cite{Li_2019,Pei_2022}
+
+Talk about the order of magnitude of the different interactions > charge--(induced dipole high magnitude)
+
+Standard methods failing to describe oms\cite{Perry_2014} 
+
+\todo{faire référence à 2-thermo partie sur les interactions\ref{sct:interaction}}
+
+
+\subsection{Studying the polarization}
+
+Inspired by works on the subject\cite{Lachet_1998,Becker_2017} 
 
 \todo{essayer d'ajouter la polarisabilité pour PEI et al. et Li et al.}
 
@@ -24,7 +39,6 @@ Open Metal Sites/polar groups
 \todo{Not the best material, but interesting discussion on open metal site effect}
 Tao et al.\cite{Tao_2020} looked at tuning (and improving) the selective adsorption of Xe over Kr by MOF open metal sites in the UTSA-74 framework structure.
 
-\subsection{Problem, literature}
 
 \subsection{Perpectives}
 
