--- a/4-ml.tex
+++ b/4-ml.tex
@@ -5,14 +5,15 @@
 
 \chapter{Statistical Learning of Adsorption Properties}
 \vspace*{-1\baselineskip}
-
+\todo{t-SNE somewhere ?}
 \section{Machine Learning}
 
 Machine learning (ML) models have been widely used to characterize adsorption, transport, catalytic or mechanical properties, just to cite a few. It can in some cases replace very time consuming simulations with simpler calculation of key descriptors that can help the model predict the desired properties. In other cases, it is used to describe the structure--property relationships learned by the ML model. However,machine learning is not a silver bullet, we cannot blindly apply it on any applications; it requires a thorough work on understanding the key variables that will improve the prediction. By using our work on the thermodynamic descriptors and our knowledge on the effect of pressure on the selectivity, we will build a machine learning model to characterize the separation of xenon from krypton at ambient pressure.
 
 \subsection{What is machine learning}
 
-Up until now, the computer algorithms we introduced have a predefined sequence of commands that the program executes to give the desired property. In machine learning, instead of encoding a series of instructions, the approach consists in learning a the relation between a set of target variables by using other characteristics we call descriptors or features. For example, if we want to predict the weather of tomorrow, the model could use the past weather of similar dates to infer if it will rain tomorrow; the history of the weather are the features of the ML model and the future weather is the target variable.
+Up until now, computer programs consists in giving a recipe ?
+the computer algorithms we introduced have a predefined sequence of commands that the program executes to give the desired property. In machine learning, instead of encoding a series of instructions, the approach consists in learning a the relation between a set of target variables by using other characteristics we call descriptors or features. For example, if we want to predict the weather of tomorrow, the model could use the past weather of similar dates to infer if it will rain tomorrow; the history of the weather are the features of the ML model and the future weather is the target variable.
 
 Supervised learning (what we presented earlier)
 
@@ -20,7 +21,9 @@ Unsupervised learning
 
 \subsection{How to learn accurately}
 
-\todo{Bayesian problem: knowing a series of t}
+\todo{From algorithms to machine learning. An algortihmic way of finding a relation in data. Give example of clustering and Go, selectivity example simulation / ml.}
+
+\todo{Supervised / unsupervised learning: foucs on supervised}
 
 \todo{cross validation, overfitting, hyperparameter optimization}
 
