--- a/4-ml.tex
+++ b/4-ml.tex
@@ -12,14 +12,21 @@ Machine learning (ML) models have been widely used to characterize adsorption, t
 
 \subsection{What is machine learning}
 
-Up until now, computer programs consists in giving a recipe ?
-the computer algorithms we introduced have a predefined sequence of commands that the program executes to give the desired property. In machine learning, instead of encoding a series of instructions, the approach consists in learning a the relation between a set of target variables by using other characteristics we call descriptors or features. For example, if we want to predict the weather of tomorrow, the model could use the past weather of similar dates to infer if it will rain tomorrow; the history of the weather are the features of the ML model and the future weather is the target variable.
+To understand how machine learning, first, we need to understand how a computer accomplishes a task. The human operator plays a key role in the process --- after designing the solution through theoretical considerations, he needs to write down a list of instructions, called an algorithm, that specifies every needed actions given the circumstances so that the computer achieves the desired outcome. In physical or chemical sciences, these algorithms usually articulates the different components of a theoretical model, which can be an equation without analytical solutions, an analytical expression or a probabilistic problem, just to cite a few. The previous chapters typically presented such algorithms for the simulation of adsorption processes; for instance, the GCMC simulations are based on the statistical physics of the phase equilibrium between a gas phase and adsorption phase inside a nanoporous material, and a Monte Carlo model is used to reproduce the statistics associated to the grand canonical ensemble. The energy sampling algorithms along with the Widom insertion are also good examples of how the computer can help the theoretician model the systems under specific chemical and physical conditions. 
 
-Supervised learning (what we presented earlier)
+A machine learning model is also based on an algorithm, but the goal is very different from the above-mentioned examples --- it doesn't aim at giving all the details of the computation according to proven theoretical principles. As implied by the name, the ambition would be to learn underlying relations within the input data so that it performs the task itself. The machine learning (ML) algorithm is then the list of instructions that sepecifies how the machine is going to learn from the data. For example, clustering algorithms can distinguish different classes of elements within a disordered dataset so that new concepts emerge; this type of machine learning algorithm is called unsupervised learning because we do not predfine or prelabel the data and the machine helps us understand the underlying structure in the data. The class of algorithm we want to study is rather the supervised learning model, which learns from labeled data the relation between the label and the characteristics (called features or descriptors) from a given set of data points, and can predict the label from unlabeld data using the characteristics. For example, if we want to predict the weather of tomorrow, the model could use the past weather of similar dates to infer if it will rain tomorrow; the history of the weather are the features of the ML model and the future weather is the target variable or the label of the data.
 
-Unsupervised learning
+To articulate the differences between a standard algorithm and an ML algorithm, let me introduce a fascinating board game called Go. This game is traditionnally played with 2 players on a 19 by 19 board, where each player places black/white pieces to controle the maximum of boxes. Based on these simple rules, different algorithms have been developped to make the computer play the game. The first Go program was written in the late 60s to mimick the pattern recognition of Go players when estimating the ``score'' through an influence function,\cite{zobrist1970feature} and from the 80s to the beginning of the 21\ex{st} century the first Go programs capable of playing were releases. These programs were based on simple alpha-beta search algorithms that seeks at testing every possible moves (while pruning the less promising ones); while they were working very well in other games like chess (IBM's Deep(er) Blue beat the world champion of chess in 1995), in Go these type of programs were only at the level of a novice player. The difference of performance lies in the combinatorics behind both games, the game of chess has a number of legal positions lower than $10^{47}$,\cite{website_labelle} while for the game of Go there are approximately $10^{171}$ legal positions.\cite{github_tromp_go} The state space to explore is incomparably greater and a boost in the computing power that improved the performance for computer chess is not going to make a difference for Go. A drastic reduction of the space to search is needed for a computer program to work.
+The full-width search works
+The biggest improvement came when in 2007, Coulom introduced a \cite{Coulom_2007}
 
-\subsection{How to learn accurately}
+Go combinatorics\cite{Tromp_2007}
+$$ 10^{10^48} < N < 10^{10^171}$$
+
+
+\subsection{How to accurately learn }
+
+The Elements of Statistial Learning\cite{Hastie_2009}
 
 \todo{From algorithms to machine learning. An algortihmic way of finding a relation in data. Give example of clustering and Go, selectivity example simulation / ml.}
 
