--- a/thesis.bib
+++ b/thesis.bib
@@ -3174,3 +3174,53 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Evaluation of Force Field Performance for High-Throughput Screening of Gas Uptake in Metal{\textendash}Organic Frameworks},
 	journal = {J. Phys. Chem. C}
 }
+@book{Hastie_2009,
+	doi = {10.1007/978-0-387-84858-7},
+	url = {https://doi.org/10.1007%2F978-0-387-84858-7},
+	year = 2009,
+	publisher = {Springer New York},
+	author = {Trevor Hastie and Robert Tibshirani and Jerome Friedman},
+	title = {The Elements of Statistical Learning}
+}
+@incollection{Tromp_2007,
+	doi = {10.1007/978-3-540-75538-8_8},
+	url = {https://doi.org/10.1007%2F978-3-540-75538-8_8},
+	year = 2007,
+	publisher = {Springer Berlin Heidelberg},
+	pages = {84--99},
+	author = {John Tromp and Gunnar Farnebäck},
+	title = {Combinatorics of Go},
+	booktitle = {Computers and Games}
+}
+@book{zobrist1970feature,
+  title={Feature extraction and representation for pattern recognition and the game of Go},
+  author={Zobrist, Albert Lindsey},
+  year={1970},
+  publisher={The University of Wisconsin-Madison}
+}
+@incollection{Coulom_2007,
+	doi = {10.1007/978-3-540-75538-8_7},
+	url = {https://doi.org/10.1007%2F978-3-540-75538-8_7},
+	year = 2007,
+	publisher = {Springer Berlin Heidelberg},
+	pages = {72--83},
+	author = {R{\'{e}}mi Coulom},
+	title = {Efficient Selectivity and Backup Operators in Monte-Carlo Tree Search},
+	booktitle = {Computers and Games}
+}
+@misc{github_tromp_go,
+  title = {Number of legal Go positions},
+  year={},
+  author = {John Tromp},
+  editor = {github},
+  note = { Available online at \url{https://tromp.github.io/go/legal.html}},
+  lastchecked = {2023-05-21}
+}
+@misc{website_labelle,
+  title = {Number of legal Go positions},
+  year={2016},
+  author = {François Labelle},
+  editor = {},
+  note = { Available online at \url{http://wismuth.com/chess/chess.html}},
+  lastchecked = {2023-05-21}
+}
