--- a/thesis.bib
+++ b/thesis.bib
@@ -3224,3 +3224,29 @@ URL = {https://doi.org/10.1137/0216006},
   note = { Available online at \url{http://wismuth.com/chess/chess.html}},
   lastchecked = {2023-05-21}
 }
+@article{Silver_2016,
+	doi = {10.1038/nature16961},
+	url = {https://doi.org/10.1038%2Fnature16961},
+	year = 2016,
+	month = {jan},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {529},
+	number = {7587},
+	pages = {484--489},
+	author = {David Silver and Aja Huang and Chris J. Maddison and Arthur Guez and Laurent Sifre and George van den Driessche and Julian Schrittwieser and Ioannis Antonoglou and Veda Panneershelvam and Marc Lanctot and Sander Dieleman and Dominik Grewe and John Nham and Nal Kalchbrenner and Ilya Sutskever and Timothy Lillicrap and Madeleine Leach and Koray Kavukcuoglu and Thore Graepel and Demis Hassabis},
+	title = {Mastering the game of Go with deep neural networks and tree search},
+	journal = {Nature}
+}
+@article{Silver_2017,
+	doi = {10.1038/nature24270},
+	url = {https://doi.org/10.1038%2Fnature24270},
+	year = 2017,
+	month = {oct},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {550},
+	number = {7676},
+	pages = {354--359},
+	author = {David Silver and Julian Schrittwieser and Karen Simonyan and Ioannis Antonoglou and Aja Huang and Arthur Guez and Thomas Hubert and Lucas Baker and Matthew Lai and Adrian Bolton and Yutian Chen and Timothy Lillicrap and Fan Hui and Laurent Sifre and George van den Driessche and Thore Graepel and Demis Hassabis},
+	title = {Mastering the game of Go without human knowledge},
+	journal = {Nature}
+}
